unpackaged/main/default/objects/WorkIt2__Timing__c/WorkIt2__Timing__c.object-meta.xml
<CustomObject>
    <description>A collection of Time Entries for a specific User and Object pair.</description>
    <label>Timing</label>
    <nameField>
        <displayFormat>T-{00000000}</displayFormat>
        <label>Timing Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>