unpackaged/main/default/objects/WorkIt2__Timing__c/fields/WorkIt2__Case__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Timings</relationshipLabel>
    <relationshipName>Timings</relationshipName>
    <type>Lookup</type>
</CustomField>