unpackaged/main/default/objects/WorkIt2__Timing__c/fields/WorkIt2__Hours__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__Hours__c</fullName>
    <formula>floor(WorkIt2__Total_Seconds__c / 3600 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>