unpackaged/main/default/objects/WorkIt2__Timing__c/fields/WorkIt2__Overtime_Status__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__Overtime_Status__c</fullName>
    <formula>CASE( WorkIt2__Color__c ,
&quot;Red&quot;, IMAGE(&quot;/resource/WorkIt2__Workit2Resources/img/rainbow_01.png&quot;, &quot;Red&quot;) ,
&quot;Orange&quot;, IMAGE(&quot;/resource/WorkIt2__Workit2Resources/img/rainbow_02.png&quot;, &quot;Orange&quot;) ,
&quot;Yellow&quot;, IMAGE(&quot;/resource/WorkIt2__Workit2Resources/img/rainbow_03.png&quot;, &quot;Yellow&quot;) ,
&quot;Blue&quot;, IMAGE(&quot;/resource/WorkIt2__Workit2Resources/img/rainbow_05.png&quot;, &quot;Blue&quot;) ,
&quot;Violet&quot;, IMAGE(&quot;/resource/WorkIt2__Workit2Resources/img/rainbow_06.png&quot;, &quot;Violet&quot;) ,
IMAGE(&quot;/resource/WorkIt2__Workit2Resources/img/rainbow_04.png&quot;, &quot;Green&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overtime Status</label>
    <type>Text</type>
</CustomField>