unpackaged/main/default/objects/WorkIt2__Timing__c/fields/WorkIt2__Seconds__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__Seconds__c</fullName>
    <formula>MOD( WorkIt2__Total_Seconds__c ,60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>