unpackaged/main/default/objects/WorkIt2__Timing__c/fields/WorkIt2__Session_Count__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__Session_Count__c</fullName>
    <label>Session Count</label>
    <summaryForeignKey>WorkIt2__Time_Entry__c.WorkIt2__Timing__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>