unpackaged/main/default/objects/WorkIt2__Timing__c/fields/WorkIt2__Total_Seconds__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__Total_Seconds__c</fullName>
    <label>WINTERNAL: Total Seconds</label>
    <summarizedField>WorkIt2__Time_Entry__c.WorkIt2__Workflow_Seconds__c</summarizedField>
    <summaryForeignKey>WorkIt2__Time_Entry__c.WorkIt2__Timing__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>