unpackaged/main/default/objects/WorkIt2__Timing__c/listViews/WorkIt2__All.listView-meta.xml
<ListView>
    <fullName>WorkIt2__All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>WorkIt2__Case__c</columns>
    <columns>WorkIt2__Session_Count__c</columns>
    <columns>WorkIt2__Time__c</columns>
    <columns>WorkIt2__Business_Time__c</columns>
    <columns>WorkIt2__Overtime_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>